--- a/model/model.ipynb
+++ b/model/model.ipynb
@@ -39,6 +39,170 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start preparing training data ...\n",
+      "Reading lines...\n",
+      "Read 221282 sentence pairs\n",
+      "Trimmed to 63446 sentence pairs\n",
+      "Counting words...\n",
+      "Counted words: 17774\n",
+      "\n",
+      "pairs:\n",
+      "['there .', 'where ?']\n",
+      "['you have my word . as a gentleman', 'you re sweet .']\n",
+      "['hi .', 'looks like things worked out tonight huh ?']\n",
+      "['you know chastity ?', 'i believe we share an art instructor']\n",
+      "['have fun tonight ?', 'tons']\n",
+      "['well no . . .', 'then that s all you had to say .']\n",
+      "['then that s all you had to say .', 'but']\n",
+      "['but', 'you always been this selfish ?']\n",
+      "['do you listen to this crap ?', 'what crap ?']\n",
+      "['what good stuff ?', ' the real you . ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import unicodedata\n",
+    "import re\n",
+    "import csv\n",
+    "import codecs\n",
+    "import os\n",
+    "# 定义新文件的路径\n",
+    "corpus='../cornell/'\n",
+    "datafile = os.path.join(corpus, \"formatted_movie_lines.txt\")\n",
+    "# 默认词向量\n",
+    "PAD_token = 0  # Used for padding short sentences\n",
+    "SOS_token = 1  # Start-of-sentence token\n",
+    "EOS_token = 2  # End-of-sentence token\n",
+    "\n",
+    "class Voc:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        self.trimmed = False\n",
+    "        self.word2index = {}\n",
+    "        self.word2count = {}\n",
+    "        self.index2word = {PAD_token: \"PAD\", SOS_token: \"SOS\", EOS_token: \"EOS\"}\n",
+    "        self.num_words = 3  # Count SOS, EOS, PAD\n",
+    "    # 添加句子中的所有单词到词汇表\n",
+    "    def addSentence(self, sentence):\n",
+    "        for word in sentence.split(' '):\n",
+    "            self.addWord(word)\n",
+    "    # 向词汇表中添加单词\n",
+    "    def addWord(self, word):\n",
+    "        if word not in self.word2index:\n",
+    "            self.word2index[word] = self.num_words\n",
+    "            self.word2count[word] = 1\n",
+    "            self.index2word[self.num_words] = word\n",
+    "            self.num_words += 1\n",
+    "        else:\n",
+    "            self.word2count[word] += 1\n",
+    "\n",
+    "    # 删除低于特定计数阈值的单词\n",
+    "    def trim(self, min_count):\n",
+    "        if self.trimmed:\n",
+    "            return\n",
+    "        self.trimmed = True\n",
+    "\n",
+    "        keep_words = []\n",
+    "\n",
+    "        for k, v in self.word2count.items():\n",
+    "            if v >= min_count:\n",
+    "                keep_words.append(k)\n",
+    "\n",
+    "        print('keep_words {} / {} = {:.4f}'.format(\n",
+    "            len(keep_words), len(self.word2index), len(keep_words) / len(self.word2index)\n",
+    "        ))\n",
+    "\n",
+    "        # 重初始化字典\n",
+    "        self.word2index = {}\n",
+    "        self.word2count = {}\n",
+    "        self.index2word = {PAD_token: \"PAD\", SOS_token: \"SOS\", EOS_token: \"EOS\"}\n",
+    "        self.num_words = 3 # Count default tokens\n",
+    "\n",
+    "        for word in keep_words:\n",
+    "            self.addWord(word)\n",
+    "MAX_LENGTH = 10  # Maximum sentence length to consider\n",
+    "def unicodeToAscii(s):\n",
+    "    return ''.join(\n",
+    "        c for c in unicodedata.normalize('NFD', s)\n",
+    "        if unicodedata.category(c) != 'Mn'\n",
+    "    )\n",
+    "\n",
+    "def normalizeString(s):\n",
+    "    s = unicodeToAscii(s.lower().strip())\n",
+    "    s = re.sub(r\"([.!?])\", r\" \\1\", s)\n",
+    "    s = re.sub(r\"[^a-zA-Z.!?]+\", r\" \", s)\n",
+    "    return s\n",
+    "# 初始化Voc对象 和 格式化pairs对话存放到list中\n",
+    "def readVocs(datafile, corpus_name):\n",
+    "    print(\"Reading lines...\")\n",
+    "    # Read the file and split into lines\n",
+    "    lines = open(datafile, encoding='utf-8').read().strip().split('\\n')\n",
+    "    # Split every line into pairs and normalize\n",
+    "    pairs = [[normalizeString(s) for s in l.split('\\t')] for l in lines]\n",
+    "    voc = Voc(corpus_name)\n",
+    "    return voc, pairs\n",
+    "\n",
+    "# 如果对 'p' 中的两个句子都低于 MAX_LENGTH 阈值，则返回True\n",
+    "def filterPair(p):\n",
+    "    # Input sequences need to preserve the last word for EOS token\n",
+    "    return len(p[0].split(' ')) < MAX_LENGTH and len(p[1].split(' ')) < MAX_LENGTH\n",
+    "\n",
+    "# 过滤满足条件的 pairs 对话\n",
+    "def filterPairs(pairs):\n",
+    "    return [pair for pair in pairs if filterPair(pair)]\n",
+    "\n",
+    "# 使用上面定义的函数，返回一个填充的voc对象和对列表\n",
+    "def loadPrepareData(corpus, corpus_name, datafile, save_dir):\n",
+    "    print(\"Start preparing training data ...\")\n",
+    "    voc, pairs = readVocs(datafile, corpus_name)\n",
+    "    print(\"Read {!s} sentence pairs\".format(len(pairs)))\n",
+    "    pairs = filterPairs(pairs)\n",
+    "    print(\"Trimmed to {!s} sentence pairs\".format(len(pairs)))\n",
+    "    print(\"Counting words...\")\n",
+    "    for pair in pairs:\n",
+    "        voc.addSentence(pair[0])\n",
+    "        voc.addSentence(pair[1])\n",
+    "    print(\"Counted words:\", voc.num_words)\n",
+    "    return voc, pairs\n",
+    "\n",
+    "# 加载/组装voc和对\n",
+    "save_dir = os.path.join(\"data\", \"save\")\n",
+    "voc, pairs = loadPrepareData(corpus, '../cornell/formatted_movie_lines.txt', datafile, save_dir)\n",
+    "# 打印一些对进行验证\n",
+    "print(\"\\npairs:\")\n",
+    "for pair in pairs[:10]:\n",
+    "    print(pair)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "63446"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(pairs)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -56,8 +220,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Error loading punkt: <urlopen error [Errno 11004]\n",
-      "[nltk_data]     getaddrinfo failed>\n"
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\Justi\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
      ]
     }
    ],
@@ -119,8 +284,8 @@
     "\n",
     "max_sequence_length = max(max(len(seq) for seq in input_sequences), max(len(seq) for seq in output_sequences))\n",
     "\n",
-    "input_padded = pad_sequences(input_sequences, maxlen=max_sequence_length, padding='post')\n",
-    "output_padded = pad_sequences(output_sequences, maxlen=max_sequence_length, padding='post')\n"
+    "input_padded = pad_sequences(input_sequences, maxlen=max_sequence_length, padding='pre')\n",
+    "output_padded = pad_sequences(output_sequences, maxlen=max_sequence_length, padding='pre')"
    ]
   },
   {
